GNOME Bugzilla – Bug 740684
unknown parameter 'error' in documentation comment, should be 'err'
Last modified: 2014-11-26 14:33:36 UTC
Got this warning while building git master (146a80d6). Please, see the attached patch.
Created attachment 291454 [details] [review] ovirt-resource: 'error' -> 'err' in doc comment ovirt-resource.c:1049: Warning: GoVirt: ovirt_resource_delete_finish: unknown parameter 'error' in documentation comment, should be 'err'
Attachment 291454 [details] pushed as dabcf5a - ovirt-resource: 'error' -> 'err' in doc comment