ovirt-resource: 'error' -> 'err' in doc comment

ovirt-resource.c:1049: Warning: GoVirt: ovirt_resource_delete_finish:
unknown parameter 'error' in documentation comment, should be 'err'

https://bugzilla.gnome.org/show_bug.cgi?id=740684